classDiagram

    class Group {
        +slug: string  %% PK
        +title: string
        +blurb: string
        +where: string
        +color: string

        +org: Org
       
    }

    class Program {
        
    }

    Group <|-- Program


    class Track {

    }
    Group <|-- Track

    class Category {

    }
    Group <|-- Category

    class SubCategory {

    }
    Group <|-- SubCategory

    
    class Topic {

    }
    
    Group <|-- Topic


    
